--- a/CrudeOperations/app/src/main/res/layout/activity_main.xml
+++ b/CrudeOperations/app/src/main/res/layout/activity_main.xml
@@ -22,8 +22,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
         android:text="Add New Data"
+        android:textAllCaps="false" />
+
+    <Button
+        android:id="@+id/sort"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:text="Sort Ascending"
         android:textAllCaps="false" />
 
 </RelativeLayout>
