--- a/CrudeOperations/app/src/main/res/layout/activity_update.xml
+++ b/CrudeOperations/app/src/main/res/layout/activity_update.xml
@@ -4,13 +4,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/holo_orange_dark"
     tools:context="com.example.lcom151_two.crudeoperations.Update">
+
+    <ImageButton
+        android:id="@+id/close"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_close_black_24dp"
+        android:background="@android:color/holo_orange_dark"
+        android:layout_alignParentRight="true"
+        />
 
     <EditText
         android:id="@+id/uemail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
+        android:layout_below="@id/close"
         android:hint="Enter email"/>
 
     <EditText
