--- a/CrudeOperations/app/src/main/res/layout/activity_add_data.xml
+++ b/CrudeOperations/app/src/main/res/layout/activity_add_data.xml
@@ -7,11 +7,21 @@
     tools:context="com.example.lcom151_two.crudeoperations.AddData"
     android:background="@android:color/darker_gray">
 
+    <ImageButton
+        android:id="@+id/close1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_close_black_24dp"
+        android:background="@android:color/darker_gray"
+        android:layout_alignParentRight="true"
+        />
+
     <EditText
         android:id="@+id/email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
+        android:layout_below="@+id/close1"
         android:hint="Enter email"/>
 
     <EditText
