--- a/CrudeOperations/app/src/main/res/layout/display.xml
+++ b/CrudeOperations/app/src/main/res/layout/display.xml
@@ -5,11 +5,21 @@
     android:layout_height="match_parent"
     android:background="@android:color/holo_blue_bright">
 
+    <ImageButton
+        android:id="@+id/close"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_close_black_24dp"
+        android:background="@android:color/holo_blue_bright"
+        android:layout_alignParentRight="true"
+        />
+
     <TextView
         android:id="@+id/email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
+        android:layout_below="@id/close"
         android:textSize="20sp"/>
 
     <TextView
