--- a/RetrofitUser/app/src/main/res/layout-xlarge/activity_display.xml
+++ b/RetrofitUser/app/src/main/res/layout-xlarge/activity_display.xml
@@ -23,7 +23,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_marginTop="370dp">
+        android:layout_marginTop="740dp">
 
         <ImageButton
             android:id="@+id/close"
@@ -37,11 +37,11 @@
 
     <LinearLayout
         android:id="@+id/displayLayout"
-        android:layout_marginTop="410dp"
+        android:layout_marginTop="780dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:background="@android:color/holo_blue_bright"
+        android:background="@android:color/holo_orange_dark"
         android:visibility="gone">
 
         <ImageView
