--- a/RetrofitUser/app/src/main/res/layout/activity_update.xml
+++ b/RetrofitUser/app/src/main/res/layout/activity_update.xml
@@ -29,6 +29,7 @@
         android:id="@+id/password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:password="true"
         android:layout_below="@id/email"/>
 
     <EditText
