--- a/RetrofitUser/app/src/main/res/values/dimens.xml
+++ b/RetrofitUser/app/src/main/res/values/dimens.xml
@@ -1,5 +1,6 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="tsize">20sp</dimen>
+    <dimen name="lsize">30sp</dimen>
     <dimen name="leftmargin">10sp</dimen>
 </resources>
